--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ featured_image: /images/social.jpg
 
 	<div class="content-wrap portfolio-wrap">
 
-		{% for project in site.projects reversed %}
+		{% assign project_by_order = site.projects | sort: "order" | reverse %}
+		{% for project in project_by_order %}
 
 		<div class="portfolio-item">
 
